# cck

./: .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.sh  work.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
benches/: asymmetric.rs  compress.rs  format.rs  hash.rs  rand.rs  symmetric.rs
crates/asymmetric/src/: ed25519.rs  key_type.rs  lib.rs  string.rs  x25519.rs
crates/asymmetric/tests/: ed25519.rs  key.rs  key_type.rs
crates/cck-asymmetric/: Cargo.toml
crates/cck-asymmetric/benches/: benches.sh  ed25519.rs  x25519.rs
crates/cck-asymmetric/src/: ed25519.rs  fingerprint.rs  key.rs  lib.rs  string.rs  x25519.rs
crates/cck-asymmetric/tests/: expiry.rs  key.rs  tests.sh  x25519.rs
crates/cck-common/: Cargo.toml
crates/cck-common/benches/: benches.sh  rand.rs
crates/cck-common/src/: lib.rs  size.rs
crates/cck-compress/: Cargo.toml
crates/cck-compress/benches/: benches.sh  deflate.rs
crates/cck-compress/src/: deflate.rs  lib.rs
crates/cck-compress/tests/: deflate.rs  tests.sh
crates/cck-format/: Cargo.toml  benches.sh
crates/cck-format/benches/: base64ct.rs  benches.sh  hex.rs  pem.rs
crates/cck-format/src/: base64ct.rs  hex.rs  lib.rs  pem.rs
crates/cck-format/tests/: base64ct.rs  hex.rs  pem.rs  tests.sh
crates/cck-hash/: Cargo.toml
crates/cck-hash/benches/: argon2.rs  benches.sh  blake3.rs  sha2.rs
crates/cck-hash/src/: argon2.rs  blake3.rs  lib.rs  sha2.rs
crates/cck-hash/tests/: argon2.rs  blake3.rs  sha2.rs
crates/cck-rand/: Cargo.toml
crates/cck-rand/benches/: benches.sh  rand.rs
crates/cck-rand/src/: lib.rs
crates/cck-symmetric/: Cargo.toml
crates/cck-symmetric/benches/: aes.rs  benches.sh  chacha.rs
crates/cck-symmetric/src/: aead.rs  aes.rs  chacha.rs  lib.rs
crates/cck-symmetric/tests/: aes.rs  chacha.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  size.rs
crates/common/src/format/: base64ct.rs  hex.rs  pem.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: expiry.rs  fingerprint.rs  hybrid.rs  key.rs  key_type.rs  lib.rs  string.rs
crates/crypto/src/asymmetric/: ed25519.rs  x25519.rs
crates/crypto/src/hash/: argon2.rs  blake3.rs  mod.rs  sha2.rs
crates/crypto/src/rand/: mod.rs
crates/crypto/src/symmetric/: aead.rs  aes.rs  chacha.rs  mod.rs
crates/keyring/: Cargo.toml
crates/keyring/src/: certificate.rs  expiry.rs  fingerprint.rs  key.rs  key_type.rs  lib.rs  model.rs  ring.rs  sql.rs  string.rs  user.rs
crates/keyring/src/database/: mod.rs
crates/keyring/tests/: expiry.rs  key.rs  key_type.rs  string.rs  tests.sh
src/: hash.rs  lib.rs  rand.rs
src/asymmetric/: ed25519.rs  mod.rs  x25519.rs
src/compress/: deflate.rs  mod.rs
src/format/: base64ct.rs  hex.rs  mod.rs  pem.rs
src/hash/: blake3.rs  mod.rs  sha2.rs
src/key_ring/: key.rs
src/symmetric/: aead.rs  aes.rs  chacha.rs  mod.rs
tests/: hash.rs
