[package]
name = "cck"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cck"
path = "./src/lib.rs"

[[bin]]
name = "cck"
path = "./src/bin/cli/main.rs"
required-features = ["alloc"]

[[bin]]
name = "cckd"
path = "./src/bin/broker/main.rs"
required-features = ["alloc"]

[dependencies]

#https://github.com/rust-random/
rand = "0.8.5"
rand_chacha = "0.3.1"

#https://github.com/RustCrypto/traits/
aead = { version = "0.5.2", features=["arrayvec"] }
digest = "0.10.7"
signature = "2.1.0"

#https://github.com/RustCrypto/AEADs/
chacha20poly1305 = "0.10.1"

#https://github.com/RustCrypto/hashes
sha2 = "0.10.7"

#https://github.com/RustCrypto/formats/
base64ct = "1.6.0"
pem-rfc7468 = "0.7.0"

#https://github.com/BLAKE3-team/BLAKE3/
blake3 = "1.3.3"

#https://github.com/dalek-cryptography/ed25519-dalek/
ed25519-dalek = {version="2.0.0", features=["rand_core"]}

#https://github.com/dalek-cryptography/x25519-dalek/
x25519-dalek = {version="2.0.0", features=["static_secrets"]}

#https://github.com/rust-lang/flate2-rs
flate2 = "1.0.27"

[features]
alloc = ["base64ct/alloc", "aead/alloc", "chacha20poly1305/alloc", "pem-rfc7468/alloc"]
#std = []