[package]
name = "cck"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cck"
path = "./src/cli/main.rs"
#required-features = ["alloc"]

[[bin]]
name = "cckd"
path = "./src/broker/main.rs"

[worksoace]
members = [
    "crates/*"
]

[dependencies]
cck-common={version="0.0.1",path="./crates/cck-common"}
cck-symmetric={version="0.0.1",path="./crates/cck-symmetric"}
cck-asymmetric={version="0.0.1",path="./crates/cck-asymmetric"}
cck-hash={version="0.0.1",path="./crates/cck-hash"}

[features]
