[package]
name = "cck-compress"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#https://github.com/rust-lang/flate2-rs
flate2 = "1.0.27"

#Internal
cck-common={path="../cck-common",version="0.0.1"}

[features]
alloc = []