[package]
name = "cck-hash"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#https://github.com/RustCrypto/traits/
digest = "0.10.7"

#https://github.com/RustCrypto/hashes
sha2 = "0.10.7"

#https://github.com/BLAKE3-team/BLAKE3/
blake3 = "1.3.3"

#Internal
cck-common={path="../cck-common",version="0.0.1"}


[features]