[package]
name = "cck-symmetric"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#https://github.com/RustCrypto/traits/
aead = { version = "0.5.2", features=["arrayvec"] }

#https://github.com/RustCrypto/AEADs/
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.2"

#Internal
cck-common={path="../cck-common",version="0.0.1"}


[features]
alloc = ["aead/alloc", "chacha20poly1305/alloc", "aes-gcm/alloc"]
