[package]
name = "keyring"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#Internal
cck-common={path="../cck-common",version="0.0.1"}
cck-asymmetric={path="../cck-asymmetric",version="0.0.1"}
cck-hash={path="../cck-hash",version="0.0.1"}
cck-format={path="../cck-format",version="0.0.1"}

[features]
